[gd_scene load_steps=5 format=2]

[ext_resource path="res://Items/Item.gd" type="Script" id=1]

[sub_resource type="CircleShape2D" id=2]
radius = 7.07107

[sub_resource type="CircleShape2D" id=1]
radius = 4.0

[sub_resource type="CircleShape2D" id=3]
radius = 12.0

[node name="Item" type="KinematicBody2D"]
collision_layer = 0
script = ExtResource( 1 )

[node name="WorldCollision" type="CollisionShape2D" parent="."]
shape = SubResource( 2 )

[node name="ItemSprite" type="Sprite" parent="."]

[node name="SoftCollision" type="Area2D" parent="."]
modulate = Color( 1, 0, 1, 0.141176 )
collision_layer = 16
collision_mask = 16

[node name="CollisionShape2D" type="CollisionShape2D" parent="SoftCollision"]
shape = SubResource( 1 )

[node name="PickupDetection" type="Area2D" parent="."]
collision_layer = 256
collision_mask = 128

[node name="CollisionShape2D" type="CollisionShape2D" parent="PickupDetection"]
shape = SubResource( 3 )

[connection signal="area_entered" from="SoftCollision" to="." method="_on_SoftCollision_area_entered"]
[connection signal="area_exited" from="SoftCollision" to="." method="_on_SoftCollision_area_exited"]
[connection signal="area_entered" from="PickupDetection" to="." method="_on_PickupDetection_area_entered"]
[connection signal="area_exited" from="PickupDetection" to="." method="_on_PickupDetection_area_exited"]
